updated variables, added icons and hero images, added fonts, updated fonts on main content

--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -19,6 +19,9 @@
                 <h1>Striving for a world where <span class="invert">startups</span> are owned by those who <span class="invert">built it</span></h1>
                 <p class="title-2">We are building a community of individuals & organisations who believe there is a better way to fund, build and reward startups.</p>
             </div>
+            <div class="hero-graphic">
+                <img src="/images/Frame 338.svg" />
+            </div>
             <div class="cta-box">
                 <div class="box-header">
                     <p class="subtitle-small">Join the Sparc community, and get access to a list of resources & guidance.</p>
@@ -63,7 +66,7 @@
             </div>
             <div class="mission-wrapper">
                 <div class="mission-icon">
-                    <img src="images/icons/04.svg" />
+                    <img src="images/icons/09.svg" />
                 </div>
                 <div class="mission-content">
                     <h5 class="subtitle-large">Behind every venture, there are folks who are persistently dedicating their unique talents, energy and skills.</h5>
@@ -87,21 +90,21 @@
             <div class="card-wrapper">
                 <div class="card-value">
                     <div class="icon">
-                        <img src="images/icons/04.svg" />
+                        <img src="images/icons/02.svg" />
                     </div>
                     <p class="subtitle-large">Self-Governance</p>
                     <p class="subtitle-medium">At each fork in the road, the members themselves vote for the direction that Sparc goes. There is no board, no executive team, no outside owners to override us. Where we want to go, we go together, and we learn together.</p>
                 </div>
                 <div class="card-value">
                     <div class="icon">
-                        <img src="images/icons/04.svg" />
+                        <img src="images/icons/07.svg" />
                     </div>
                     <p class="subtitle-large">Self-Governance</p>
                     <p class="subtitle-medium">At each fork in the road, the members themselves vote for the direction that Sparc goes. There is no board, no executive team, no outside owners to override us. Where we want to go, we go together, and we learn together.</p>
                 </div>
                 <div class="card-value">
                     <div class="icon">
-                        <img src="images/icons/04.svg" />
+                        <img src="images/icons/08.svg" />
                     </div>
                     <p class="subtitle-large">Self-Governance</p>
                     <p class="subtitle-medium">At each fork in the road, the members themselves vote for the direction that Sparc goes. There is no board, no executive team, no outside owners to override us. Where we want to go, we go together, and we learn together.</p>
