--- a/SparcWeb/wwwroot/Styles/Global/_assets.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_assets.scss
@@ -54,7 +54,7 @@ button {
 
 .cta-box {
     padding: 24px 32px;
-    background: $yellow;
+    background: $yellow-500;
     border: 1px solid var(--grey-900);
     border-radius: 24px;
     max-width: 562px;
