--- a/SparcWeb/wwwroot/Styles/Global/_variables.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_variables.scss
@@ -1,14 +1,19 @@
-﻿$white: #FFFFFF;
-$yellow: #FFB600;
-$yellow-100: #F2EDDF;
-$yellow-500: #FFB600;
-
-$purple-500: #0C0662;
-
+﻿//colors
+$black: #000000;
+$white: #FFFFFF;
+$blue-500: #2A74FF;
 $blue-100: #EBF2FF;
-
+$green-500: #06EFC2;
+$green-100: #EBFFFB;
 $peach-500: #FF756A;
 $peach-100: #FFECEB;
+$purple-500: #0C0662;
+$purple-100: #ECEBFF;
+$yellow-500: #FFB600;
+$yellow-100: #F2EDDF;
+$grey-900: #111321;
+$grey-700: #38383B;
+$grey-500: #68696E;
 
 $box-shadow-md: -10px 2px 4px rgba(16, 45, 71, 0.02);
 
@@ -29,7 +34,7 @@ section:last-of-type {
 
 .cta-box {
     padding: 24px 32px;
-    background: $yellow;
+    background: $yellow-500;
     border: 1px solid var(--grey-900);
     border-radius: 24px;
     max-width: 562px;
