--- a/SparcWeb/wwwroot/Styles/Page/index.scss
+++ b/SparcWeb/wwwroot/Styles/Page/index.scss
@@ -1,155 +1,174 @@
 ﻿@import "../Global/_variables.scss";
 
+.homepage {
+    //fonts
+    h1, h2, h3, h4, h5, .invert {
+        font-family: 'NeueHaasDisplayMedium';
+    }
 
-.home-hero {
-    background: $yellow-100;
-    position: relative;
+    p, p.subtitle-medium, a {
+        font-family: 'NeueHaasDisplayRoman';
+    }
 
-    .header {
-        width: 64%;
-        margin: 0 auto;
-        margin-bottom: 72px;
+    .home-hero {
+        background: $yellow-100;
+        position: relative;
 
-        h1 {
-            margin-bottom: 16px;
+        .micro-post {
+            padding: 20px;
+
+            p {
+                padding: 10px;
+            }
         }
 
-        p {
+        .header {
             width: 64%;
             margin: 0 auto;
-        }
-    }
+            margin-bottom: 72px;
 
-    .micro-post {
-        padding: 20px;
-
-        p {
-            padding: 10px;
-        }
-    }
-}
-
-.center{
-    text-align: center;
-}
-
-.learn-more {
-    position: absolute;
-    bottom: 24px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    display: flex;
-    flex-direction: column;
-
-    p{
-        margin-bottom: 24px;
-    }
-
-    img{
-        max-height: 24px;
-    }
-}
-
-.mission {
-
-    &-wrapper {
-        max-width: 40%;
-        margin: 0 auto;
-
-        &:first-child {
-            margin-bottom: 160px;
-        }
-    }
-
-    &-icon {
-        margin-bottom: 38px;
-    }
-
-    &-content {
-        h5 {
-            margin-bottom: 48px;
-        }
-    }
-}
-
-.values {
-    background: $yellow-100;
-
-    .container {
-        position: relative;
-    }
-
-    &-tag {
-        margin: 0 auto;
-        margin-bottom: 24px;
-        background: $white;
-
-        p {
-            color: var(--error-500);
-        }
-    }
-
-    .header {
-        margin: 0 auto;
-        margin-bottom: 80px;
-        text-align: center;
-        max-width: 60%;
-    }
-
-    .card-wrapper {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 32px;
-        margin-bottom: 200px;
-        text-align: center;
-
-        .card-value {
-            background: white;
-            padding: 56px 40px 40px;
-            border-radius: 24px;
-
-            .icon {
-                margin-bottom: 32px;
+            h1 {
+                margin-bottom: 16px;
             }
 
-            .subtitle-large {
-                margin-bottom: 12px;
+            p {
+                width: 64%;
+                margin: 0 auto;
+            }
+        }
+
+        .hero-graphic {
+            display: block;
+            text-align: center;
+            margin-bottom: 72px;
+        }
+
+        .learn-more {
+            position: absolute;
+            bottom: 24px;
+            left: 50%;
+            transform: translate(-50%, 0);
+            display: flex;
+            flex-direction: column;
+
+            p {
+                margin-bottom: 24px;
+            }
+
+            img {
+                max-height: 24px;
             }
         }
     }
 
-    .project-wrapper {
-        display: flex;
-        justify-content: space-between;
-        gap: 100px;
+    .center {
+        text-align: center;
+    }
 
-        .left {
-            position: relative;
+    .mission {
+        &-wrapper {
+            max-width: 40%;
+            margin: 0 auto;
 
+            &:first-child {
+                margin-bottom: 160px;
+            }
+        }
+
+        &-icon {
+            margin-bottom: 38px;
+        }
+
+        &-content {
             h5 {
-                margin-bottom: 54px;
+                margin-bottom: 48px;
+                font-family: 'NeueHaasDisplayMedium';
             }
+        }
+    }
 
-            button {
-                background: var(--grey-900);
-                border-radius: 100px;
-                font-size: 16px;
-                font-style: italic;
+    .values {
+        background: $yellow-100;
 
-                img {
-                    margin-left: 10px;
+        .container {
+            position: relative;
+        }
+
+        &-tag {
+            margin: 0 auto;
+            margin-bottom: 24px;
+            background: $white;
+
+            p {
+                color: var(--error-500);
+            }
+        }
+
+        .header {
+            margin: 0 auto;
+            margin-bottom: 80px;
+            text-align: center;
+            max-width: 60%;
+
+            h2 {
+                font-family: 'NeueHaasDisplayMedium';
+            }
+        }
+
+        .card-wrapper {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 32px;
+            margin-bottom: 200px;
+            text-align: center;
+
+            .card-value {
+                background: white;
+                padding: 56px 40px 40px;
+                border-radius: 24px;
+
+                .icon {
+                    margin-bottom: 32px;
+                }
+
+                .subtitle-large {
+                    margin-bottom: 12px;
                 }
             }
         }
 
-        .right {
-            .card-wrapper {
-                text-align: left;
-                display: flex;
-                flex-direction: column;
+        .project-wrapper {
+            display: flex;
+            justify-content: space-between;
+            gap: 100px;
+
+            .left {
+                position: relative;
+
+                h5 {
+                    margin-bottom: 54px;
+                }
+
+                button {
+                    background: var(--grey-900);
+                    border-radius: 100px;
+                    font-size: 16px;
+                    font-style: italic;
+
+                    img {
+                        margin-left: 10px;
+                    }
+                }
             }
-            /*.project-card {
+
+            .right {
+                .card-wrapper {
+                    text-align: left;
+                    display: flex;
+                    flex-direction: column;
+                }
+                /*.project-card {
                 background: white;
                 padding: 32px;
                 border-radius: 24px;
@@ -189,21 +208,22 @@
                 }
             }*/
 
-            .card:last-child {
-                margin-bottom: 0;
+                .card:last-child {
+                    margin-bottom: 0;
+                }
             }
         }
     }
-}
 
-.resources {
-    .header {
-        margin-bottom: 54px;
-        max-width: 50%;
-    }
+    .resources {
+        .header {
+            margin-bottom: 54px;
+            max-width: 50%;
+        }
 
-    &-tag {
-        background: $peach-100;
-        color: $peach-500;
+        &-tag {
+            background: $peach-100;
+            color: $peach-500;
+        }
     }
 }
