--- a/SparcWeb/wwwroot/Styles/Global/_variables.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_variables.scss
@@ -14,6 +14,8 @@ $yellow-100: #F2EDDF;
 $grey-900: #111321;
 $grey-700: #38383B;
 $grey-500: #68696E;
+$grey-300: #7A7B7F;
+$grey-100: #9FA0A3;
 
 $box-shadow-md: -10px 2px 4px rgba(16, 45, 71, 0.02);
 
