--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
 <PageTitle>Sparc</PageTitle>
 
-<div class="homepage">
+<div class="homepage" id="homepage">
     <section class="home-hero">
-        <div class="micro-post">
+@*        <div class="micro-post">
             @if(PostList != null)
             {
                  @foreach(var item in PostList)
@@ -14,15 +14,15 @@
                 }
             }
         </div>
-        <div class="container">
+*@        <div class="container">
             <div class="header center">
                 <h1>Striving for a world where <span class="invert">startups</span> are owned by those who <span class="invert">built it</span></h1>
                 <p class="title-2">We are building a community of individuals & organisations who believe there is a better way to fund, build and reward startups.</p>
             </div>
-            <div class="hero-graphic">
+@*            <div class="hero-graphic">
                 <img src="/images/Frame 338.svg" />
             </div>
-            <div class="cta-box">
+*@            <div class="cta-box">
                 <div class="box-header">
                     <p class="subtitle-small">Join the Sparc community, and get access to a list of resources & guidance.</p>
                 </div>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="learn-more">
-                <p class="subtitle-small">Learn more about our mission</p>
+                <p class="subtitle-small">learn more about our mission</p>
                 <img src="images/icons/Down.svg" />
             </div>
         </div>
@@ -69,11 +69,11 @@
                     <img src="images/icons/09.svg" />
                 </div>
                 <div class="mission-content">
-                    <h5 class="subtitle-large">Behind every venture, there are folks who are persistently dedicating their unique talents, energy and skills.</h5>
-                    <h5 class="subtitle-large">All in pursuit of a larger goal.</h5>
-                    <h5 class="subtitle-large">And yet, the value they are creating above and beyond their salaries is always locked away.</h5>
-                    <h5 class="subtitle-large">Owned by someone else...</h5>
-                    <h5 class="subtitle-large">It is as though their contributions are somehow lesser. Less deserving. Less crucial. The value of their own creations gets suctioned away, while they're asked to give just a little more.</h5>
+                    <h5 class="subtitle-large">Sparc Cooperative is a verfied Worker Cooperative, all the way down to our bylaws.</h5>
+                    <h5 class="subtitle-large">This means that at Sparc, money does not buy power. Every person owns an equal share and has an equal vote, no matter their job.</h5>
+                    <h5 class="subtitle-large">No external investment can dictate the direction the Sparc team goes.</h5>
+                    <h5 class="subtitle-large">No single person walks away with the majority of the project.</h5>
+                    <h5 class="subtitle-large">And no person's skill or opinion is less important than another's.</h5>
                 </div>
             </div>
         </div>
@@ -99,33 +99,33 @@
                     <div class="icon">
                         <img src="images/icons/07.svg" />
                     </div>
-                    <p class="subtitle-large">Self-Governance</p>
-                    <p class="subtitle-medium">At each fork in the road, the members themselves vote for the direction that Sparc goes. There is no board, no executive team, no outside owners to override us. Where we want to go, we go together, and we learn together.</p>
+                    <p class="subtitle-large">Self-Sufficiency</p>
+                    <p class="subtitle-medium">Every profitable startup created at Sparc retains a certain percentage of its profit to give forward to the next projects. All the rest belongs to the people.</p>
                 </div>
                 <div class="card-value">
                     <div class="icon">
                         <img src="images/icons/08.svg" />
                     </div>
-                    <p class="subtitle-large">Self-Governance</p>
-                    <p class="subtitle-medium">At each fork in the road, the members themselves vote for the direction that Sparc goes. There is no board, no executive team, no outside owners to override us. Where we want to go, we go together, and we learn together.</p>
+                    <p class="subtitle-large">Self-Determination</p>
+                    <p class="subtitle-medium">Each member of Sparc defines their own role, as they know their skills best. And they own that role completely, including every decision it requires. They are the trusted expert by default.</p>
                 </div>
             </div>
 
             <div class="project-wrapper">
                 <div class="left">
-                    <div class="section-tag project-tag"><p class="subtitle-medium">Sparc Projects</p></div>
+                    <div class="section-tag project-tag">
+                        <p class="subtitle-medium">Sparc Projects</p>
+                    </div>
                     <h5>To put this belief into practice, we have self funded a few initial startups, which, once profitable will be able to continue to fund following startups through to their own profitability.</h5>
                     <a href="/projectlist">View All Projects <img src="images/icons/Icon Right.svg" /></a>
                 </div>
                 <div class="right">
                     <div class="card-wrapper">
                         <div class="project-card">
-                            <div class="card-image">
-                                <img />
-                            </div>
                             <div class="card-content">
                                 <div class="image-wrapper">
-                                    <img src="./images/Laptop.png" />
+                                    <img src="images/Laptop.png" />
+                                    <img class="project-status in-progress" src="images/icons/Status Pin In Progress.svg" />
                                 </div>
                                 <div class="card-header">
                                     <h5 class="title-2 semi-bold">KodeKit</h5>
@@ -142,18 +142,16 @@
                                         <button class="btn-small">Productivity</button>
                                     </div>
                                     <div class="card-github">
-                                        @*icon*@
+                                        <button><img src="images/icons/Github.svg" /></button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="project-card">
-                            <div class="card-image">
-                                <img />
-                            </div>
                             <div class="card-content">
                                 <div class="image-wrapper">
-                                    <img src="./images/Laptop.png" />
+                                    <img src="images/Laptop.png" />
+                                    <img class="project-status live" src="images/icons/Status Pin Live.svg" />
                                 </div>
                                 <div class="card-header">
                                     <h5 class="title-2 semi-bold">KodeKit</h5>
@@ -170,18 +168,17 @@
                                         <button class="btn-small">Productivity</button>
                                     </div>
                                     <div class="card-github">
-                                        @*icon*@
+                                        <button><img src="images/icons/Github.svg" /></button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="project-card">
-                            <div class="card-image">
-                                <img />
-                            </div>
                             <div class="card-content">
                                 <div class="image-wrapper">
-                                    <img src="./images/Laptop.png" />
+                                    <img src="images/Laptop.png" />
+                                    <img class="project-status live" src="images/icons/Status Pin Live.svg" />
+
                                 </div>
                                 <div class="card-header">
                                     <h5 class="title-2 semi-bold">KodeKit</h5>
@@ -198,7 +195,7 @@
                                         <button class="btn-small">Productivity</button>
                                     </div>
                                     <div class="card-github">
-                                        @*icon*@
+                                        <button><img src="images/icons/Github.svg" /></button>
                                     </div>
                                 </div>
                             </div>
