--- a/SparcWeb/wwwroot/Styles/Page/index.scss
+++ b/SparcWeb/wwwroot/Styles/Page/index.scss
@@ -2,15 +2,20 @@
 
 .homepage {
     //fonts
-    h1, h2, h3, h4, h5, .invert {
+    h1, h2, h3, h4, h5, h6 {
         font-family: 'NeueHaasDisplayMedium';
     }
 
-    p, p.subtitle-medium, a {
+    p, p.subtitle-medium, a, button {
         font-family: 'NeueHaasDisplayRoman';
     }
 
+    .center {
+        text-align: center;
+    }
+
     .home-hero {
+        padding-top: 122px;
         background: $yellow-100;
         position: relative;
 
@@ -29,11 +34,22 @@
 
             h1 {
                 margin-bottom: 16px;
+                font-size: 96px;
+                line-height: 115px;
             }
 
-            p {
+            p.title-2 {
                 width: 64%;
                 margin: 0 auto;
+                font-family: 'IBMPlexSans-Medium';
+                font-size: 24px;
+                line-height: 38px;
+            }
+
+            span.invert {
+                font-family: 'NeueHaasDisplayMedium';
+                color: $yellow-100;
+                -webkit-text-stroke: 2px $grey-900;
             }
         }
 
@@ -43,6 +59,19 @@
             margin-bottom: 72px;
         }
 
+        .cta-box {
+            p.subtitle-small {
+                font-family: 'NeueHaasDisplayMedium';
+                font-size: 14px;
+                line-height: 17px;
+            }
+
+            button {
+                font-size: 16px;
+                line-height: 100%;
+            }
+        }
+
         .learn-more {
             position: absolute;
             bottom: 24px;
@@ -50,6 +79,11 @@
             transform: translate(-50%, 0);
             display: flex;
             flex-direction: column;
+            text-align: center;
+
+            a:hover {
+                cursor: pointer;
+            }
 
             p {
                 margin-bottom: 24px;
@@ -61,11 +95,9 @@
         }
     }
 
-    .center {
-        text-align: center;
-    }
-
     .mission {
+        padding-bottom: 112px;
+
         &-wrapper {
             max-width: 40%;
             margin: 0 auto;
@@ -83,14 +115,18 @@
             h5 {
                 margin-bottom: 48px;
                 font-family: 'NeueHaasDisplayMedium';
+                font-size: 32px;
+                line-height: 100%;
             }
         }
     }
 
     .values {
+        padding-bottom: 160px;
         background: $yellow-100;
 
         .container {
+            padding-bottom: 0px;
             position: relative;
         }
 
@@ -116,14 +152,17 @@
         }
 
         .card-wrapper {
+            width: 100%;
+            max-width: 1216px;
+            margin: 0 auto;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            justify-content: center;
             gap: 32px;
             margin-bottom: 200px;
             text-align: center;
 
             .card-value {
+                max-width: 384px;
                 background: white;
                 padding: 56px 40px 40px;
                 border-radius: 24px;
@@ -139,22 +178,31 @@
         }
 
         .project-wrapper {
+            width: 100%;
+            max-width: 1216px;
+            margin: 0 auto;
             display: flex;
             justify-content: space-between;
             gap: 100px;
 
             .left {
+                width: 1000px;
                 position: relative;
 
                 h5 {
                     margin-bottom: 54px;
+                    font-size: 32px;
+                    line-height: 42px;
                 }
 
-                button {
-                    background: var(--grey-900);
+                a {
+                    padding: 12px 24px;
                     border-radius: 100px;
-                    font-size: 16px;
-                    font-style: italic;
+                    background: $grey-900;
+                    color: $white;
+                    font-family: 'NeueHaasDisplayRomanItalic';
+                    font-size: 20px;
+                    line-height: 20px;
 
                     img {
                         margin-left: 10px;
@@ -164,9 +212,69 @@
 
             .right {
                 .card-wrapper {
+                    margin-bottom: 0px;
                     text-align: left;
                     display: flex;
                     flex-direction: column;
+                    gap: 32px;
+
+                    .project-card {
+                        margin-bottom: 0px;
+
+                        .card-content {
+                            .image-wrapper {
+                                position: relative;
+
+                                img.project-status {
+                                    position: absolute;
+                                    top: 8px;
+                                    right: 8px;
+                                }
+
+                                img.in-progress {
+                                    width: 109px;
+                                }
+
+                                img.live {
+                                    width: 67px;
+                                }
+                            }
+
+                            h5 {
+                                font-size: 24px;
+                                line-height: 31px;
+                            }
+
+                            p {
+                                font-size: 14px;
+                                line-height: 18px;
+                            }
+
+                            .btn-small {
+                                font-family: 'NeueHaasDisplayRomanItalic';
+                            }
+
+                            .card-tags-wrapper {
+                                display: flex;
+                                justify-content: space-between;
+
+                                .card-github {
+                                    button {
+                                        padding: 2px 14px 0px 14px;
+                                        background: transparent;
+                                        border: 1px solid $grey-100;
+                                        border-radius: 100px;
+                                        opacity: 0.75;
+
+                                        img {
+                                            width: 15px;
+                                            opacity: 0.75;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
                 /*.project-card {
                 background: white;
@@ -215,8 +323,45 @@
         }
     }
 
+    .community {
+        .card-wrapper {
+            .cta-flex {
+                display: block;
+                padding-left: 10px;
+            }
+
+            p.subtitle-medium {
+                font-size: 20px;
+                line-height: 28px;
+            }
+
+            .community-signup {
+                p {
+                    font-size: 16px;
+                    line-height: 21px;
+                }
+
+                input {
+                    border: $grey-300;
+                    font-size: 16px;
+                    line-height: 16px;
+                    color: $grey-500;
+                    opacity: 0.5;
+                }
+
+                button {
+                    font-size: 16px;
+                    line-height: 16px;
+                }
+            }
+        }
+    }
+
     .resources {
+        padding-bottom: 290px;
+
         .header {
+            max-width: 592px;
             margin-bottom: 54px;
             max-width: 50%;
         }
