--- a/SparcWeb/wwwroot/css/app.css
+++ b/SparcWeb/wwwroot/css/app.css
@@ -219,6 +219,7 @@ nav {
 }
 nav .logo {
   flex: 1;
+  margin-right: 10px;
 }
 nav .logo img {
   max-width: 114px;
@@ -231,21 +232,33 @@ nav .nav-links-wrapper {
   border-radius: 100px;
   padding: 10px 24px;
 }
+nav .nav-links-wrapper a {
+  font-family: "NeueHaasDisplayRoman";
+}
 nav .community-join {
   flex: 1;
 }
-nav .community-join .profile-pic {
+nav .community-join .profile-pics-wrapper {
+  margin-right: 10px;
+  margin-left: 20px;
+}
+nav .community-join .profile-pics-wrapper .profile-pic {
   margin-right: 12px;
   max-width: 14px;
   max-height: 20px;
 }
-nav .community-join .profile-pic img {
+nav .community-join .profile-pics-wrapper .profile-pic img {
   max-width: 24px;
   max-height: 24px;
 }
 nav .community-join button {
+  padding: 10px 24px;
   background: #FF756A;
   border: none;
+  font-family: "NeueHaasDisplayMedium";
+  font-size: 14px;
+  font-style: normal;
+  text-align: center;
 }
 
 .blog-wrapper {
@@ -265,12 +278,12 @@ nav .community-join button {
   margin-bottom: 12px;
 }
 .blog-wrapper .blog-card .blog-tags .tag {
-  border: 1px solid var(--primary-300);
+  border: 1px solid rgba(104, 105, 110, 0.5);
   border-radius: 100px;
   box-shadow: -10px 2px 4px rgba(16, 45, 71, 0.02);
   color: var(--primary-900);
   background: white;
-  font-weight: 450;
+  font-weight: 400;
 }
 
 .hero-header {
@@ -368,8 +381,11 @@ nav .community-join button {
   margin-top: 72px;
 }
 
+.resources {
+  padding-bottom: 190px;
+}
 .resources .header {
-  margin-bottom: 54px;
+  margin-bottom: 190px;
   max-width: 50%;
 }
 .resources .header .resources-tag {
@@ -466,6 +482,16 @@ nav .community-join button {
   font-weight: 900;
   src: url(../fonts/NeueHaasDisplayBlackItalic.ttf) format("truetype");
 }
+@font-face {
+  font-family: "IBMPlexSans-Medium";
+  font-weight: 500;
+  src: url(../fonts/IBMPlexSans-Medium.ttf) format("truetype");
+}
+@font-face {
+  font-family: "IBMPlexSans-MediumItalic";
+  font-weight: 500;
+  src: url(../fonts/IBMPlexSans-MediumItalic.ttf) format("truetype");
+}
 .container {
   max-width: 1480px;
   margin: 0 auto;
@@ -532,13 +558,17 @@ h1 {
   color: var(--error-500);
 }
 
-.homepage h1, .homepage h2, .homepage h3, .homepage h4, .homepage h5, .homepage .invert {
+.homepage h1, .homepage h2, .homepage h3, .homepage h4, .homepage h5, .homepage h6 {
   font-family: "NeueHaasDisplayMedium";
 }
-.homepage p, .homepage p.subtitle-medium, .homepage a {
+.homepage p, .homepage p.subtitle-medium, .homepage a, .homepage button {
   font-family: "NeueHaasDisplayRoman";
 }
+.homepage .center {
+  text-align: center;
+}
 .homepage .home-hero {
+  padding-top: 122px;
   background: #F2EDDF;
   position: relative;
 }
@@ -555,15 +585,34 @@ h1 {
 }
 .homepage .home-hero .header h1 {
   margin-bottom: 16px;
+  font-size: 96px;
+  line-height: 115px;
 }
-.homepage .home-hero .header p {
+.homepage .home-hero .header p.title-2 {
   width: 64%;
   margin: 0 auto;
+  font-family: "IBMPlexSans-Medium";
+  font-size: 24px;
+  line-height: 38px;
+}
+.homepage .home-hero .header span.invert {
+  font-family: "NeueHaasDisplayMedium";
+  color: #F2EDDF;
+  -webkit-text-stroke: 2px #111321;
 }
 .homepage .home-hero .hero-graphic {
   display: block;
   text-align: center;
   margin-bottom: 72px;
+}
+.homepage .home-hero .cta-box p.subtitle-small {
+  font-family: "NeueHaasDisplayMedium";
+  font-size: 14px;
+  line-height: 17px;
+}
+.homepage .home-hero .cta-box button {
+  font-size: 16px;
+  line-height: 100%;
 }
 .homepage .home-hero .learn-more {
   position: absolute;
@@ -572,6 +621,10 @@ h1 {
   transform: translate(-50%, 0);
   display: flex;
   flex-direction: column;
+  text-align: center;
+}
+.homepage .home-hero .learn-more a:hover {
+  cursor: pointer;
 }
 .homepage .home-hero .learn-more p {
   margin-bottom: 24px;
@@ -579,8 +632,8 @@ h1 {
 .homepage .home-hero .learn-more img {
   max-height: 24px;
 }
-.homepage .center {
-  text-align: center;
+.homepage .mission {
+  padding-bottom: 112px;
 }
 .homepage .mission-wrapper {
   max-width: 40%;
@@ -595,11 +648,15 @@ h1 {
 .homepage .mission-content h5 {
   margin-bottom: 48px;
   font-family: "NeueHaasDisplayMedium";
+  font-size: 32px;
+  line-height: 100%;
 }
 .homepage .values {
+  padding-bottom: 160px;
   background: #F2EDDF;
 }
 .homepage .values .container {
+  padding-bottom: 0px;
   position: relative;
 }
 .homepage .values-tag {
@@ -620,14 +677,17 @@ h1 {
   font-family: "NeueHaasDisplayMedium";
 }
 .homepage .values .card-wrapper {
+  width: 100%;
+  max-width: 1216px;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
   gap: 32px;
   margin-bottom: 200px;
   text-align: center;
 }
 .homepage .values .card-wrapper .card-value {
+  max-width: 384px;
   background: white;
   padding: 56px 40px 40px;
   border-radius: 24px;
@@ -639,23 +699,32 @@ h1 {
   margin-bottom: 12px;
 }
 .homepage .values .project-wrapper {
+  width: 100%;
+  max-width: 1216px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   gap: 100px;
 }
 .homepage .values .project-wrapper .left {
+  width: 1000px;
   position: relative;
 }
 .homepage .values .project-wrapper .left h5 {
   margin-bottom: 54px;
+  font-size: 32px;
+  line-height: 42px;
 }
-.homepage .values .project-wrapper .left button {
-  background: var(--grey-900);
+.homepage .values .project-wrapper .left a {
+  padding: 12px 24px;
   border-radius: 100px;
-  font-size: 16px;
-  font-style: italic;
+  background: #111321;
+  color: #FFFFFF;
+  font-family: "NeueHaasDisplayRomanItalic";
+  font-size: 20px;
+  line-height: 20px;
 }
-.homepage .values .project-wrapper .left button img {
+.homepage .values .project-wrapper .left a img {
   margin-left: 10px;
 }
 .homepage .values .project-wrapper .right {
@@ -700,14 +769,86 @@ h1 {
   }*/
 }
 .homepage .values .project-wrapper .right .card-wrapper {
+  margin-bottom: 0px;
   text-align: left;
   display: flex;
   flex-direction: column;
+  gap: 32px;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card {
+  margin-bottom: 0px;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content .image-wrapper {
+  position: relative;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content .image-wrapper img.project-status {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content .image-wrapper img.in-progress {
+  width: 109px;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content .image-wrapper img.live {
+  width: 67px;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content h5 {
+  font-size: 24px;
+  line-height: 31px;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content p {
+  font-size: 14px;
+  line-height: 18px;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content .btn-small {
+  font-family: "NeueHaasDisplayRomanItalic";
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content .card-tags-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content .card-tags-wrapper .card-github button {
+  padding: 2px 14px 0px 14px;
+  background: transparent;
+  border: 1px solid #9FA0A3;
+  border-radius: 100px;
+  opacity: 0.75;
+}
+.homepage .values .project-wrapper .right .card-wrapper .project-card .card-content .card-tags-wrapper .card-github button img {
+  width: 15px;
+  opacity: 0.75;
 }
 .homepage .values .project-wrapper .right .card:last-child {
   margin-bottom: 0;
 }
+.homepage .community .card-wrapper .cta-flex {
+  display: block;
+  padding-left: 10px;
+}
+.homepage .community .card-wrapper p.subtitle-medium {
+  font-size: 20px;
+  line-height: 28px;
+}
+.homepage .community .card-wrapper .community-signup p {
+  font-size: 16px;
+  line-height: 21px;
+}
+.homepage .community .card-wrapper .community-signup input {
+  border: #7A7B7F;
+  font-size: 16px;
+  line-height: 16px;
+  color: #68696E;
+  opacity: 0.5;
+}
+.homepage .community .card-wrapper .community-signup button {
+  font-size: 16px;
+  line-height: 16px;
+}
+.homepage .resources {
+  padding-bottom: 290px;
+}
 .homepage .resources .header {
+  max-width: 592px;
   margin-bottom: 54px;
   max-width: 50%;
 }
